--- a/SitioWeb/Views/User/Create.cshtml
+++ b/SitioWeb/Views/User/Create.cshtml
@@ -47,7 +47,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Registrar Usuario", "Welcome", new { area = "" }, new { @class = "btn btn-secondary ml-1" })
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
