--- a/SitioWeb/Views/User/Welcome.cshtml
+++ b/SitioWeb/Views/User/Welcome.cshtml
@@ -36,7 +36,7 @@
             }
         </ul>
         <p class="col-6" ">
-            @Html.ActionLink("Registrar Usuario", "Create", new { @class = "btn btn-info ml-1" })
+            @Html.ActionLink("Registrar Usuario", "Create", new { area = "" }, new { @class = "btn btn-secondary ml-1" })
         </p>
     </div>
 
