Eliminación etiqueta link

--- a/SitioWeb/Views/Shared/_Layout.cshtml
+++ b/SitioWeb/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
-        <a class="navbar-brand" href="#">@Html.ActionLink("Examen Práctico", "Index", "Home", new { area = "" }, new { @class = "navbar-brand text-white" })</a>
+        <p class="navbar-brand text-white mb-n2">Examen Práctico </p>
     </nav>
     <div class="container body-content mt-1">
         @RenderBody()
